# OPTNWallet

./: .env.sample  .gitignore  AI_CAULDRON_IMPLEMENTATION_GAP.md  AI_CAULDRON_REVENUE_OPPORTUNITIES.md  OPTNWallet.code-workspace  OPTN_Wallet_commits_2026.txt  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  test.js  tsconfig.core.json  tsconfig.json  vite.config.ts  vite.desktop.config.ts  vitest.config.ts
android/: build.gradle  capacitor.settings.gradle  gradle.properties
cashscript/: CustodyVault.cash  README.md  contracts.manifest.json
deployments/: Feb 21, 3026
docs/: AIRDROPS_ADDON_LOCAL_DEV.md  EVENT_ADDON_LOCAL_DEV.md  OPTN_WALLET_AIRDROPS_ADDON_PLAN.md  OPTN_WALLET_EVENT_ADDON_PLAN.md  README.md  UX_IMPROVEMENT_PLAN.md  addon-development-guide.md  addons-sdk.md  build-and-release.md  cashscript-contract-systems.md  cashtokens-nft-flow.md  custody-vault-design-notes.md  integration-guide.md  quantumroot-flow.md  wallet-architecture.md  wizardconnect-integration-notes.md
patches/: @capacitor+clipboard+7.0.1.patch  @capacitor+dialog+7.0.1.patch  @capacitor+filesystem+7.1.3.patch  @capacitor+local-notifications+7.0.2.patch  @capacitor+splash-screen+7.0.1.patch  @capacitor+status-bar+7.0.3.patch  @capacitor+toast+7.0.1.patch  tseep+1.3.1.patch
schemas/: addon-manifest.schema.json
scripts/: compile-cashscript-artifacts.mjs  generate-cauldron-snapshot.mjs
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+609 files in other folders)
