[package]
name = "optn-wallet-desktop"
version = "1.6.2"
description = "OPTN Wallet Desktop"
authors = ["OPTNLabs"]
license = "GPL-3.0"
repository = "https://github.com/OPTNLabs/OPTNWallet"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
